dark mode toggle container changed from anchor tag to div (SEO issues fix)

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -167,12 +167,14 @@ header {
     #dark-mode {
       /* dark mode toggle switch */
       visibility: hidden;
+      margin-bottom: 2rem;
       display: flex;
       justify-content: center;
       align-items: center;
       @include m.desktop {
         visibility: visible;
         margin-left: 3rem;
+        margin-bottom: 0;
       }
       span {
         color: v.$black;
